--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -642,6 +642,8 @@ async function loadTasksForDate(selectedDate) {
 
 // Determine whose turn it is for a specific date based on task history
 
+
+// Determine whose turn it is for a specific date based on task history
 function determineTurnForDate(task, dateStr) {
     if (!task || !task.users || task.users.length === 0) {
         return "Unknown";
@@ -649,176 +651,103 @@ function determineTurnForDate(task, dateStr) {
 
     const userOrder = [...task.users];
     const targetDate = new Date(dateStr);
-    targetDate.setHours(0, 0, 0, 0);
     const today = new Date();
-    today.setHours(0, 0, 0, 0);
+    today.setHours(0, 0, 0, 0); // Normalize to start of day
 
+    // Calculate days difference
     const diffDays = Math.floor((targetDate - today) / (1000 * 60 * 60 * 24));
 
-    // Get repeat limit
-    let repeatLimit = 1;
-    if (task.repeat === "Daily") repeatLimit = task.timesPerDay || 1;
-    if (task.repeat === "Weekly") repeatLimit = task.timesPerWeek || 1;
-    if (task.repeat === "Monthly") repeatLimit = task.timesPerMonth || 1;
+    // For today or tomorrow, respect task.turn if set
+    if (diffDays <= 1) {
+        // Check if task.turn is set and valid
+        if (task.turn && userOrder.includes(task.turn)) {
+            const currentDayCompletions = task.completions && task.completions[dateStr]
+                ? task.completions[dateStr].length
+                : 0;
 
-    // Handle today
-    if (diffDays === 0) {
-        const completions = task.completions && task.completions[dateStr] ? task.completions[dateStr] : [];
-        if (completions.length >= repeatLimit) {
-            const lastUser = completions[completions.length - 1];
-            const lastIndex = userOrder.indexOf(lastUser);
-            return userOrder[(lastIndex + 1) % userOrder.length];
-        } else if (completions.length > 0) {
-            const lastUser = completions[completions.length - 1];
-            const lastIndex = userOrder.indexOf(lastUser);
-            return userOrder[(lastIndex + 1) % userOrder.length];
-        }
-        // No completions today, check yesterday
-        const yesterday = new Date(today);
-        yesterday.setDate(today.getDate() - 1);
-        const yesterdayStr = formatDate(yesterday);
-        const yesterdayCompletions = task.completions && task.completions[yesterdayStr] ? task.completions[yesterdayStr] : [];
-        if (yesterdayCompletions.length >= repeatLimit) {
-            const lastUser = yesterdayCompletions[yesterdayCompletions.length - 1];
-            const lastIndex = userOrder.indexOf(lastUser);
-            return userOrder[(lastIndex + 1) % userOrder.length];
-        }
-        return userOrder[0]; // Default to first user if no relevant completions
-    }
+            let repeatLimit = 1;
+            if (task.repeat === "Daily") repeatLimit = task.timesPerDay || 1;
+            if (task.repeat === "Weekly") repeatLimit = task.timesPerWeek || 1;
+            if (task.repeat === "Monthly") repeatLimit = task.timesPerMonth || 1;
 
-    // Handle tomorrow
-    if (diffDays === 1) {
-        // Base tomorrow's turn on today's completion state
-        const todayStr = formatDate(today);
-        const todayCompletions = task.completions && task.completions[todayStr] ? task.completions[todayStr] : [];
-        let startingIndex = 0;
-        if (todayCompletions.length > 0) {
-            const lastUser = todayCompletions[todayCompletions.length - 1];
-            startingIndex = userOrder.indexOf(lastUser);
-            // If today has met repeatLimit, advance one more
-            if (todayCompletions.length >= repeatLimit) {
-                startingIndex = (startingIndex + 1) % userOrder.length;
-            }
-        } else {
-            // Check yesterday if today has no completions
-            const yesterday = new Date(today);
-            yesterday.setDate(today.getDate() - 1);
-            const yesterdayStr = formatDate(yesterday);
-            const yesterdayCompletions = task.completions && task.completions[yesterdayStr] ? task.completions[yesterdayStr] : [];
-            if (yesterdayCompletions.length >= repeatLimit) {
-                const lastUser = yesterdayCompletions[yesterdayCompletions.length - 1];
-                startingIndex = userOrder.indexOf(lastUser);
-                startingIndex = (startingIndex + 1) % userOrder.length;
+            // If completions are less than repeat limit, return current turn
+            if (currentDayCompletions < repeatLimit) {
+                return task.turn;
+            } else {
+                // Move to next user after current turn
+                const currentIndex = userOrder.indexOf(task.turn);
+                return userOrder[(currentIndex + 1) % userOrder.length];
             }
         }
-        // Apply today's completions to determine tomorrow's starting point
-        const todayCycles = todayCompletions.length >= repeatLimit ? repeatLimit : todayCompletions.length;
-        const tomorrowIndex = (startingIndex + todayCycles) % userOrder.length;
-        return userOrder[tomorrowIndex];
-    }
 
-    // For future dates beyond tomorrow, use projection
-    return projectTurnForFutureDate(task, dateStr);
-}
+        // Fallback to completion-based logic
+        const currentDayCompletions = task.completions && task.completions[dateStr]
+            ? task.completions[dateStr].length
+            : 0;
 
+        if (currentDayCompletions > 0) {
+            const lastCompletedUserIndex = userOrder.indexOf(task.completions[dateStr][currentDayCompletions - 1]);
+            return userOrder[(lastCompletedUserIndex + 1) % userOrder.length];
+        }
 
+        // Find the most recent day with completions
+        const dateNumbers = {};
+        const allDates = [];
 
-function projectTurnForFutureDate(task, dateStr) {
-    if (!task || !task.users || task.users.length === 0) {
-        return "Unknown";
-    }
-
-    const userOrder = [...task.users];
-    const targetDate = new Date(dateStr);
-    targetDate.setHours(0, 0, 0, 0);
-    const startDate = new Date(task.date.split(" to ")[0]);
-    startDate.setHours(0, 0, 0, 0);
-
-    const diffTime = targetDate - startDate;
-    const diffDays = Math.floor(diffTime / (1000 * 60 * 60 * 24));
-
-    if (diffDays < 0) {
-        return userOrder[0];
-    }
-
-    let repeatLimit = 1;
-    let cycles = 0;
-
-    if (task.repeat === "Daily") {
-        repeatLimit = task.timesPerDay || 1;
-        cycles = diffDays * repeatLimit;
-    } else if (task.repeat === "Weekly") {
-        repeatLimit = task.timesPerWeek || 1;
-        const weeks = Math.floor(diffDays / 7);
-        cycles = weeks * repeatLimit;
-    } else if (task.repeat === "Monthly") {
-        repeatLimit = task.timesPerMonth || 1;
-        const months = Math.floor(diffDays / 30);
-        cycles = months * repeatLimit;
-    } else {
-        cycles = diffDays;
-    }
-
-    // Find the most recent completion date on or before targetDate
-    let lastCompletedUser = null;
-    let lastCompletionDate = null;
-    let lastCompletionCount = 0;
-    const dateNumbers = {};
-    const allDates = [];
-
-    if (task.completions) {
-        Object.keys(task.completions).forEach(date => {
-            const dateObj = new Date(date);
-            dateObj.setHours(0, 0, 0, 0);
-            if (dateObj <= targetDate) {
+        if (task.completions) {
+            Object.keys(task.completions).forEach(date => {
                 const [year, month, day] = date.split('-').map(Number);
                 dateNumbers[date] = year * 10000 + month * 100 + day;
                 allDates.push(date);
-            }
-        });
+            });
+        }
 
         allDates.sort((a, b) => dateNumbers[b] - dateNumbers[a]);
 
+        let mostRecentDate = null;
         for (const date of allDates) {
             const dateObj = new Date(date);
             dateObj.setHours(0, 0, 0, 0);
-            if (dateObj <= targetDate && task.completions[date].length > 0) {
-                lastCompletedUser = task.completions[date][task.completions[date].length - 1];
-                lastCompletionDate = dateObj;
-                lastCompletionCount = task.completions[date].length;
+            if (dateObj < targetDate) {
+                mostRecentDate = date;
                 break;
             }
         }
-    }
 
-    let startingIndex = 0;
-    if (lastCompletedUser && lastCompletionDate) {
-        startingIndex = userOrder.indexOf(lastCompletedUser);
+        if (mostRecentDate && task.completions[mostRecentDate]) {
+            const completions = task.completions[mostRecentDate];
+            let repeatLimit = 1;
+            if (task.repeat === "Daily") repeatLimit = task.timesPerDay || 1;
+            if (task.repeat === "Weekly") repeatLimit = task.timesPerWeek || 1;
+            if (task.repeat === "Monthly") repeatLimit = task.timesPerMonth || 1;
 
-        const timeSinceLast = targetDate - lastCompletionDate;
-        const daysSinceLast = Math.floor(timeSinceLast / (1000 * 60 * 60 * 24));
+            if (completions.length < repeatLimit) {
+                const lastCompletedUser = completions.length > 0
+                    ? completions[completions.length - 1]
+                    : null;
 
-        if (task.repeat === "Daily") {
-            const remainingCompletions = repeatLimit - (lastCompletionCount % repeatLimit);
-            cycles = (daysSinceLast * repeatLimit) + (lastCompletionCount >= repeatLimit ? 0 : remainingCompletions);
-        } else if (task.repeat === "Weekly") {
-            const weeksSinceLast = Math.floor(daysSinceLast / 7);
-            const remainingCompletions = repeatLimit - (lastCompletionCount % repeatLimit);
-            cycles = (weeksSinceLast * repeatLimit) + (lastCompletionCount >= repeatLimit ? 0 : remainingCompletions);
-        } else if (task.repeat === "Monthly") {
-            const monthsSinceLast = Math.floor(daysSinceLast / 30);
-            const remainingCompletions = repeatLimit - (lastCompletionCount % repeatLimit);
-            cycles = (monthsSinceLast * repeatLimit) + (lastCompletionCount >= repeatLimit ? 0 : remainingCompletions);
-        } else {
-            cycles = daysSinceLast;
+                if (lastCompletedUser) {
+                    const lastIndex = userOrder.indexOf(lastCompletedUser);
+                    return userOrder[(lastIndex + 1) % userOrder.length];
+                }
+
+                return userOrder[0];
+            } else {
+                const lastCompletedUser = completions[completions.length - 1];
+                const lastIndex = userOrder.indexOf(lastCompletedUser);
+                return userOrder[(lastIndex + 1) % userOrder.length];
+            }
         }
+
+        return userOrder[0];
+    } else {
+        // For future dates beyond tomorrow, project the turn
+        return projectTurnForFutureDate(task, dateStr);
     }
-
-    const totalTurns = cycles % userOrder.length;
-    const finalIndex = (startingIndex + totalTurns) % userOrder.length;
-
-    return userOrder[finalIndex >= 0 ? finalIndex : userOrder.length + finalIndex];
 }
+
+
+// Show task details in a modal
 
 
 
@@ -1058,7 +987,8 @@ async function finishTask(userName, task, button, selectedDate) {
         
         // Show modal to edit task completions
 
-        async function showEditCompletionModal(task, completedUsers, today, parentModal) {
+// Show modal to edit task completions
+async function showEditCompletionModal(task, completedUsers, today, parentModal) {
     const modal = document.createElement("div");
     modal.className = "task-modal";
 
@@ -1089,23 +1019,89 @@ async function finishTask(userName, task, button, selectedDate) {
     document.getElementById("saveCompletionBtn").addEventListener("click", async () => {
         const checkboxes = modal.querySelectorAll("input[type='checkbox']");
         const newCompleted = [];
+        const removedUsers = [];
+        const addedUsers = [];
 
+        // Collect new completions and track changes
         checkboxes.forEach(box => {
+            const user = box.value;
             if (box.checked) {
-                newCompleted.push(box.value);
+                newCompleted.push(user);
+                if (!completedUsers.includes(user)) {
+                    addedUsers.push(user);
+                }
+            } else if (completedUsers.includes(user)) {
+                removedUsers.push(user);
             }
         });
 
+        // Update completions
         if (!task.completions) task.completions = {};
-        const oldCompleted = task.completions[today] || [];
         task.completions[today] = newCompleted;
 
+        // Determine the new turn based on completions and repeat settings
+        let repeatLimit = 1;
+        if (task.repeat === "Daily") repeatLimit = task.timesPerDay || 1;
+        if (task.repeat === "Weekly") repeatLimit = task.timesPerWeek || 1;
+        if (task.repeat === "Monthly") repeatLimit = task.timesPerMonth || 1;
+
+        const userOrder = [...task.users];
+        let newTurn;
+
+        if (newCompleted.length >= repeatLimit) {
+            // If repeat limit is met, move to the next user after the last completion
+            const lastCompletedUser = newCompleted[newCompleted.length - 1];
+            const lastIndex = userOrder.indexOf(lastCompletedUser);
+            newTurn = userOrder[(lastIndex + 1) % userOrder.length];
+        } else if (newCompleted.length > 0) {
+            // If partial completions, the next turn is the user after the last completion
+            const lastCompletedUser = newCompleted[newCompleted.length - 1];
+            const lastIndex = userOrder.indexOf(lastCompletedUser);
+            newTurn = userOrder[(lastIndex + 1) % userOrder.length];
+        } else {
+            // If no completions, check previous days for the last completion
+            const dateNumbers = {};
+            const allDates = [];
+
+            if (task.completions) {
+                Object.keys(task.completions).forEach(date => {
+                    if (date < today) {
+                        const [year, month, day] = date.split('-').map(Number);
+                        dateNumbers[date] = year * 10000 + month * 100 + day;
+                        allDates.push(date);
+                    }
+                });
+            }
+
+            allDates.sort((a, b) => dateNumbers[b] - dateNumbers[a]);
+
+            let lastCompletedUser = null;
+            for (const date of allDates) {
+                const completions = task.completions[date];
+                if (completions && completions.length > 0) {
+                    lastCompletedUser = completions[completions.length - 1];
+                    break;
+                }
+            }
+
+            if (lastCompletedUser) {
+                const lastIndex = userOrder.indexOf(lastCompletedUser);
+                newTurn = userOrder[(lastIndex + 1) % userOrder.length];
+            } else {
+                // No prior completions, use first user
+                newTurn = userOrder[0];
+            }
+        }
+
+        // Update task turn
+        task.turn = newTurn;
+
+        // Adjust rewards for added/removed users
         const adminEmail = localStorage.getItem("currentAdminEmail");
         const rewardAmount = Number(task.reward) || 0;
 
-        // Adjust rewards for removed users
-        const removedUsers = oldCompleted.filter(user => !newCompleted.includes(user));
-        if (adminEmail && removedUsers.length > 0) {
+        if (adminEmail) {
+            // Remove rewards for users no longer completed
             for (const user of removedUsers) {
                 await fetch("https://beemazing.onrender.com/api/rewards", {
                     method: "POST",
@@ -1113,11 +1109,8 @@ async function finishTask(userName, task, button, selectedDate) {
                     body: JSON.stringify({ adminEmail, user, amount: -rewardAmount })
                 });
             }
-        }
 
-        // Adjust rewards for newly added users
-        const addedUsers = newCompleted.filter(user => !oldCompleted.includes(user));
-        if (adminEmail && addedUsers.length > 0) {
+            // Add rewards for newly completed users
             for (const user of addedUsers) {
                 await fetch("https://beemazing.onrender.com/api/rewards", {
                     method: "POST",
@@ -1127,20 +1120,16 @@ async function finishTask(userName, task, button, selectedDate) {
             }
         }
 
+        // Save updated task to backend
         await saveTaskToBackend(task);
 
         modal.remove();
         parentModal.remove();
 
+        // Reload tasks and show updated details
         const selectedDate = document.querySelector(".day.selected")?.dataset.date;
-        if (selectedDate) {
-            await loadTasksForDate(selectedDate);
-            // Fetch the latest task data to ensure consistency
-            const response = await fetch(`https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`);
-            const updatedTasks = await response.json();
-            const updatedTask = updatedTasks.tasks.find(t => t.title === task.title && t.date === task.date);
-            if (updatedTask) showTaskDetails(updatedTask);
-        }
+        if (selectedDate) loadTasksForDate(selectedDate);
+        showTaskDetails(task);
     });
 }
 
