--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -645,6 +645,7 @@ async function loadTasksForDate(selectedDate) {
 
 
 // Determine whose turn it is for a specific date based on task history
+// Determine whose turn it is for a specific date based on task history
 function determineTurnForDate(task, dateStr) {
     if (!task || !task.users || task.users.length === 0) {
         return "Unknown";
@@ -652,28 +653,34 @@ function determineTurnForDate(task, dateStr) {
 
     const userOrder = [...task.users];
     const targetDate = new Date(dateStr);
-    targetDate.setHours(0, 0, 0, 0); // Normalize to start of day
     const today = new Date();
     today.setHours(0, 0, 0, 0); // Normalize to start of day
 
     // Calculate days difference
     const diffDays = Math.floor((targetDate - today) / (1000 * 60 * 60 * 24));
 
-    // For today, use the most recent completion data up to yesterday
-    if (diffDays === 0) {
-        // Find the most recent day with completions before today
-        const dateNumbers = {};
+    // For today or past dates, use completion history
+    if (diffDays <= 1) {
+        // Check for completions on the current day
+        const currentDayCompletions = task.completions && task.completions[dateStr]
+            ? task.completions[dateStr].length
+            : 0;
+
+        // If there are completions on the current day, the turn is for the next user
+        if (currentDayCompletions > 0) {
+            const lastCompletedUserIndex = userOrder.indexOf(task.completions[dateStr][currentDayCompletions - 1]);
+            return userOrder[(lastCompletedUserIndex + 1) % userOrder.length];
+        }
+
+        // If no completions today, find the most recent day
+        const dateNumbers = {}; // For sorting dates
         const allDates = [];
 
         if (task.completions) {
             Object.keys(task.completions).forEach(date => {
-                const dateObj = new Date(date);
-                dateObj.setHours(0, 0, 0, 0);
-                if (dateObj < today) {
-                    const [year, month, day] = date.split('-').map(Number);
-                    dateNumbers[date] = year * 10000 + month * 100 + day;
-                    allDates.push(date);
-                }
+                const [year, month, day] = date.split('-').map(Number);
+                dateNumbers[date] = year * 10000 + month * 100 + day;
+                allDates.push(date);
             });
         }
 
@@ -685,110 +692,48 @@ function determineTurnForDate(task, dateStr) {
         for (const date of allDates) {
             const dateObj = new Date(date);
             dateObj.setHours(0, 0, 0, 0);
-            if (dateObj < today) {
+            // Only consider dates before the target date
+            if (dateObj < targetDate) {
                 mostRecentDate = date;
                 break;
             }
         }
 
-        // Determine repeat limit
-        let repeatLimit = 1;
-        if (task.repeat === "Daily") repeatLimit = task.timesPerDay || 1;
-        if (task.repeat === "Weekly") repeatLimit = task.timesPerWeek || 1;
-        if (task.repeat === "Monthly") repeatLimit = task.timesPerMonth || 1;
-
         // If we found a recent date with completions
         if (mostRecentDate && task.completions[mostRecentDate]) {
             const completions = task.completions[mostRecentDate];
+            // How many completions were required on that day?
+            let repeatLimit = 1;
+            if (task.repeat === "Daily") repeatLimit = task.timesPerDay || 1;
+            if (task.repeat === "Weekly") repeatLimit = task.timesPerWeek || 1;
+            if (task.repeat === "Monthly") repeatLimit = task.timesPerMonth || 1;
+
+            // If completions were less than required, the same user should continue
             if (completions.length < repeatLimit) {
-                // If not all completions were done, continue with the next user
+                // Find who should have done it next
                 const lastCompletedUser = completions.length > 0
                     ? completions[completions.length - 1]
                     : null;
+
                 if (lastCompletedUser) {
                     const lastIndex = userOrder.indexOf(lastCompletedUser);
                     return userOrder[(lastIndex + 1) % userOrder.length];
                 }
+
+                // If no completions on that day, use the first user
                 return userOrder[0];
             } else {
-                // All completions done, move to next user
+                // All required completions were done, move to next user
                 const lastCompletedUser = completions[completions.length - 1];
                 const lastIndex = userOrder.indexOf(lastCompletedUser);
                 return userOrder[(lastIndex + 1) % userOrder.length];
             }
         }
 
-        // If no completions before today, start with first user
+        // If no history at all, start with the first user
         return userOrder[0];
-    } else if (diffDays === 1) {
-        // For tomorrow, project the turn based on the state up to yesterday
-        // Simulate as if today has no new completions
-        const yesterday = new Date(today);
-        yesterday.setDate(today.getDate() - 1);
-        const yesterdayStr = yesterday.toISOString().split("T")[0];
-
-        // Find the most recent completion before today
-        const dateNumbers = {};
-        const allDates = [];
-
-        if (task.completions) {
-            Object.keys(task.completions).forEach(date => {
-                const dateObj = new Date(date);
-                dateObj.setHours(0, 0, 0, 0);
-                if (dateObj <= yesterday) {
-                    const [year, month, day] = date.split('-').map(Number);
-                    dateNumbers[date] = year * 10000 + month * 100 + day;
-                    allDates.push(date);
-                }
-            });
-        }
-
-        allDates.sort((a, b) => dateNumbers[b] - dateNumbers[a]);
-
-        let lastCompletedUser = null;
-        let lastCompletionDate = null;
-        let repeatLimit = 1;
-        if (task.repeat === "Daily") repeatLimit = task.timesPerDay || 1;
-        if (task.repeat === "Weekly") repeatLimit = task.timesPerWeek || 1;
-        if (task.repeat === "Monthly") repeatLimit = task.timesPerMonth || 1;
-
-        for (const date of allDates) {
-            const completions = task.completions[date];
-            if (completions && completions.length > 0) {
-                lastCompletedUser = completions[completions.length - 1];
-                lastCompletionDate = new Date(date);
-                lastCompletionDate.setHours(0, 0, 0, 0);
-                break;
-            }
-        }
-
-        let startingIndex = 0;
-        if (lastCompletedUser && lastCompletionDate) {
-            startingIndex = userOrder.indexOf(lastCompletedUser);
-            const daysSinceLast = Math.floor((today - lastCompletionDate) / (1000 * 60 * 60 * 24));
-            let cycles = 0;
-
-            if (task.repeat === "Daily") {
-                cycles = daysSinceLast * repeatLimit;
-            } else if (task.repeat === "Weekly") {
-                const weeksSinceLast = Math.floor(daysSinceLast / 7);
-                cycles = weeksSinceLast * repeatLimit;
-            } else if (task.repeat === "Monthly") {
-                const monthsSinceLast = Math.floor(daysSinceLast / 30);
-                cycles = monthsSinceLast * repeatLimit;
-            } else {
-                cycles = daysSinceLast;
-            }
-
-            startingIndex = (startingIndex + cycles) % userOrder.length;
-        }
-
-        // Advance one more cycle for tomorrow
-        const totalTurns = repeatLimit;
-        const finalIndex = (startingIndex + totalTurns) % userOrder.length;
-        return userOrder[finalIndex];
     } else {
-        // For future dates beyond tomorrow, use projection
+        // For future dates beyond tomorrow, project the turn
         return projectTurnForFutureDate(task, dateStr);
     }
 }
@@ -796,8 +741,7 @@ function determineTurnForDate(task, dateStr) {
 
 
 
-
-
+// Project the turn for a future date based on repeat settings
 function projectTurnForFutureDate(task, dateStr) {
     if (!task || !task.users || task.users.length === 0) {
         return "Unknown";
@@ -893,8 +837,6 @@ function projectTurnForFutureDate(task, dateStr) {
 
     return userOrder[finalIndex];
 }
-// Show task details in a modal
-
 
 
 // Show task details in a modal
